# peak

./: .codex-hpc.toml  .gitignore  CMakeLists.txt  LICENSE  Make.inc  Makefile  README.md  blas.c  blas_level1.c  blas_level2.c  blas_level3.c  blas_wrapper_body1.h  blas_wrapper_body2.h  blasfunc.h  blasperf.c  blasperf.h  cblas.c  cblas_level1.c  cblas_level2.c  cblas_level3.c  function_wrapper_body1.c  function_wrapper_body2.c  hash.c  hash.h  instruction.md  lapack.c  libperf.c  libperf.h  makefile  pblas.c  scalapack.c  simpleperf.c  simpleperf.h  stack.c  stack.h
benchmarks/detach/: CMakeLists.txt  hpc_extreme_detach_bench.sh  run_detach_hotloop_benchmark.py  run_detach_hotloop_stress.py  run_detach_stale_thread_stress.py
src/: CMakeLists.txt  cuda_interceptor.c  cuda_interceptor.cpp  detach_controller.c  detach_helper.c  dlopen_entry_accounting.h  dlopen_entry_stub.S  dlopen_interceptor.c  exec_interceptor.c  exec_memory.c  exec_raw_syscall.c  exec_raw_syscall_trampoline.S  general_listener.c  jit_provider.c  logging.c  malloc_interceptor.c  malloc_otf2.c  mpi_interceptor.c  mpi_teardown_guard.c  peak.c  peak_detach_controller.c  peak_detach_helper.c  peak_general_listener_internal.h  peak_jit_provider.c  peak_jit_provider.h  peak_logging.c  peak_signal_policy.c  peak_signal_policy_internal.h  pthread_listener.c  signal_policy.c  syscall_interceptor.c  syscall_interceptor_policy.h  unsafe_gum_prologue.c  unsafe_gum_prologue.h
src/general_listener/: README.md  accounting.inc  attach.inc  attach_policy.c  callback_runtime.inc  callbacks.inc  config.inc  controller.inc  controller_state.inc  exec_checkpoint_writer.c  heartbeat.inc  mpi_report_transport.c  output.inc  report_formatter.c  report_maxima.c  report_model.c  report_snapshot.c  runtime_config.c  shutdown.inc  socket_report_transport.c
src/utils/: CMakeLists.txt  cuda_utils.cpp  cxx_utils.cpp  demangle.cpp  env_parser.c  mpi_utils.c  parent_registry.c  parent_registry_internal.h  process_filter.c  source_target.c  target_config.c  timing.c  utils.c  utils_internal.h
test/: CMakeLists.txt
test/config_file/: CMakeLists.txt  test_config_file.f
test/cuda/: CMakeLists.txt  mpi.sh  ompmpi.sh  pthread.sh  test_mpi.cu  test_ompmpi.cu  test_pthread.cu
test/data/: blas_symbols.conf
test/detach_benchmark/: CMakeLists.txt  run_detach_hotloop_benchmark.py  run_detach_hotloop_stress.py  run_detach_stale_thread_stress.py  test_detach_hotloop.c
test/detach_controller/: CMakeLists.txt  assert_fatal_failure.cmake  assert_preload_shutdown_fail_closed.cmake  test_detach_controller.c  test_detach_fake_helper.c  test_detach_listener_shutdown.c  test_detach_shutdown_preload.c
test/detach_runtime/: CMakeLists.txt  generate_many_targets_stress.py  run_detach_hotloop_trace_check.py  run_detach_many_targets_stress.py  run_detach_milc_like_ab_check.py  run_detach_stale_threads_trace_check.py  run_unsafe_gum_prologue_case.py  test_detach_helper_ptrace_stop_wait.c  test_detach_helper_sigchld_ignored_wrapper.c  test_detach_hotloop.c  test_detach_many_targets_stress.c  test_detach_many_targets_stress_generated.h  test_detach_milc_like.c  test_detach_stale_threads.c  test_signal_timer_abi.c  test_syscall_interceptor_policy.c  test_unsafe_gum_prologue.c  test_unsafe_gum_prologue_policy.c  unsafe_gum_prologue_aarch64.S
test/dgemm/: CMakeLists.txt  test_dgemm.f
test/dgemm_heartbeat/: CMakeLists.txt  test_dgemm_heartbeat.c  test_dgemm_heartbeat.f
test/dgemm_mpi/: CMakeLists.txt  run_mpi_lifecycle_check.py  run_mpi_report_reduction_check.py  test_dgemm_mpi.c  test_mpi_exit_before_finalize.c  test_mpi_lifecycle_checker_policy.py  test_mpi_report_reduction.c  test_mpi_report_transport.c
test/dlopen_controller/: CMakeLists.txt  test_dlopen_controller.c
test/dynamic_lib/: CMakeLists.txt  Makefile  blocking_ifunc_target.c  blocking_ifunc_test.c  concurrent_dlopen.c  customCpackage.c  dlopen_flags_test.c  dlopen_lazy_undefined_test.c  dlopen_mutation_fairness.c  dlopen_mutation_guard.c  dlopen_own_library.py  dlopen_replace_failure.c  dlopen_teardown_hot.c  external_ifunc_impl.c  external_ifunc_target.c  fork_child_dlopen.py  fork_constructor_target.c  fork_constructor_test.c  fork_inflight_dlopen.c  ifunc_external_provider_retention_test.c  ifunc_target.c  import_customCpackage_variant.py  lazy_undefined_lib.c  lazy_unresolved.c  libA.c  libB.c  main.c  multiple_providers.py  nested_dlopen_outer.c  nested_ifunc_outer.c  notype_executable_test.c  notype_target.S  resolver_nested_ifunc.c  startup_loader.c  startup_local_callable_loader.c  startup_local_callable_test.c  startup_provider_retention_test.c  startup_resolver_nested_ifunc.c  startup_unloadable_target.c  stateful_ifunc_target.c  (+5 more)
test/exec_chain/: CMakeLists.txt  run_exec_chain_check.py  run_exec_platform_selection_contract.py  run_exec_preinit_check.py  test_exec_chain.c  test_exec_chain_check_contracts.py  test_exec_chain_platform_contract.cmake  test_exec_preinit.c  test_execve_observer.c
test/fftw/: CMakeLists.txt  test_dlopen_fork_child_pid_guard.c  test_fftw.c  test_fftw2_runtime_thread_provider.c  test_fftw_dlopen_cancellation.c  test_fftw_runtime_consumer.c  test_fftw_runtime_dlopen.c  test_fftw_runtime_extension.c  test_fftw_runtime_provider.c  test_fftw_runtime_tail_jump_provider.c  test_fftw_runtime_unrelated.c
test/heartbeat/: CMakeLists.txt  test_heartbeat.c
test/include/: test_cblas.h
test/jit/: CMakeLists.txt  run_jit_framework_metadata_check.py  run_jit_profiling_check.py  test_jit_mmap_fixture.c
test/malloc/: CMakeLists.txt  test_malloc.cpp
test/memory/: CMakeLists.txt  test_memory.cpp
test/paper/: CMakeLists.txt  test_table1.c  test_table2.c  test_table3.c  test_table4.c  test_table5.c  test_table6.c  test_table7.c  test_table8_9.c
test/recursive/: CMakeLists.txt  test_recursive.c
test/report/: run_report_format_check.py  test_attach_policy.c  test_exec_checkpoint_writer.c  test_mpi_report_request_lifetime.c  test_mpi_teardown_guard.c  test_report_formatter.c  test_report_maxima.c  test_report_model.c  test_report_snapshot.c  (+2 more)
tests/: run.sh  (+6 more)
(+203 files in other folders)
